# proto-api

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  apidocs.swagger.json  apidocs.swagger.yaml  buf.gen.yaml  buf.work.yaml  buf.yaml  go.mod  gqlgen.yml  openapi.json  openapi.yaml  prototool.yaml  pyproject.toml  renovate.json  setup.cfg  tools-oapi-codegen.go
api/: apidocs.swagger.json  apidocs.swagger.yaml  buf.yaml  openapi.json  openapi.yaml
buf-roots/: github.com  google  options  protoc-gen-swagger
grpc/python/: helthcheck_pb2.py  helthcheck_pb2_grpc.py
oapi-codegen/: client_gen.go  gin_gen.go  server_gen.go  spec_gen.go  std-http_gen.go  types_gen.go
ogen/: Dockerfile  gen.go  go.mod  go.sum  tools.go
ogen/oas/: oas_cfg_gen.go  oas_client_gen.go  oas_defaults_gen.go  oas_handlers_gen.go  oas_json_gen.go  oas_parameters_gen.go  oas_request_decoders_gen.go  oas_request_encoders_gen.go  oas_response_decoders_gen.go  oas_response_encoders_gen.go  oas_router_gen.go  oas_schemas_gen.go  oas_security_gen.go  oas_server_gen.go  oas_unimplemented_gen.go  oas_validators_gen.go
openapi-client/c/: CMakeLists.txt  README.md
openapi-client/dart/: README.md
openapi-client/dart-dio/: README.md  pubspec.yaml
openapi-client/go/: README.md  api_example.go  api_example_service.go  api_health.go  api_health_check.go  api_health_check_service.go  api_health_service.go  client.go  configuration.go  model_check_response_serving_status.go  (+19 more)
pb/: buf.gen.yaml  buf.yaml
proto/: helthcheck.proto  message.proto  mod.go  option.proto  service.proto
(+768 files in other folders)
