[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "proto-api"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pylint = "^2.6.0"
pre-commit = "^2.12.0"
grpcio-tools = "^1.39.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3

[tool.pytest.ini_options]
cov_report = "html,xml"
